<resources>
    <string name="app_name">Stockbit Test</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="masuk_dengen_google">Masuk dengen Google</string>
    <string name="masuk_dengan_facebook">Masuk dengan Facebook</string>
    <string name="login">Login</string>
    <string name="masuk_dengan_fingerprint">Masuk dengan Fingerprint</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="atau">Atau</string>
    <string name="masuk">Masuk</string>
    <string name="contact_support">Contact Support</string>
    <string name="all_watchlist">All Watchlist</string>
    <string name="add_symbol">Add Symbol</string>
</resources>